Fixed overflowed site layout.

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -47,7 +47,7 @@
 .table
 {
     border: 1px solid #3b3b3b; 
-    font-size: 1.1em;
+    font-size: 1em;
     background: #3b3b3b;
     
     border-collapse:separate;
